--- a/index.html
+++ b/index.html
@@ -5,8 +5,78 @@
     <link src="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
   <!-- Banner-->
-    <h1>Broadway Design
+    <h1 id="home">Broadway Design
     </h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a>
+        </li>
+        <li><a href="#process">Process</a>
+        </li>
+        <li><a href="#work">Work</a>
+        </li>
+        <li><a href="#team">Team</a>
+        </li>
+        <li><a href="#contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
+
+  <!-- Section 1 -->
+    <div id="process">
+      <h2>Our Process
+      </h2>
+      <p>
+        <img src="./resources/icons/identify.svg" alt="swirly arrow icon">
+      </p>
+      <h3>Identify
+      </h3>
+      <p>We focus on the most important details.
+      </p>
+      <p>
+        <img src="./resources/icons/understand.svg" alt="two arrows pointing around a circle icon">
+      </p>
+      <h3>Understand
+      </h3>
+      <p>We study our projects inside and out.
+      </p>
+      <p>
+        <img src="./resources/icons/execute.svg" alt="arrows pointing up icon">
+      </p>
+      <h3>Execute
+      </h3>
+      <p>We put everything we have into our work.
+      </p>
+    </div>
+
+  <!-- Middle banner -->
+    <div class="strip">
+      <h3>Designed in New York
+      </h3>
+    </div>
+
+  <!-- Bottom Section -->
+    <div>
+      <h3 id="work">Portfolio
+      </h3>
+      <p>Coming Soon
+      </p>
+      <h3 id="team">Team
+      </h3>
+      <p>We're Hiring!
+      </p>
+      <h3 id="contact">Contact
+      </h3>
+      <p>Phone: (555)-555-5555<br />
+        E-mail: test@example.com<br />
+        Twitter: @test
+      </p>
+    </div>
+    <footer>
+      <p>© Broadway 2017 Home About Work Team Contact
+      </p>
+    </footer>
   </body>
 </html>
