--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
     <link src="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
   <!-- Banner-->
-    <h1 id="home">Broadway Design
-    </h1>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a>
-        </li>
-        <li><a href="#process">Process</a>
-        </li>
-        <li><a href="#work">Work</a>
-        </li>
-        <li><a href="#team">Team</a>
-        </li>
-        <li><a href="#contact">Contact</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="banner">
+      <h1 id="home">Broadway Design
+      </h1>
+      <nav>
+        <p><a href="#home">Home</a>
+        </p>
+        <p><a href="#process">Process</a>
+        </p>
+        <p><a href="#work">Work</a>
+        </p>
+        <p><a href="#team">Team</a>
+        </p>
+        <p><a href="#contact">Contact</a>
+        </p>
+      </nav>
+    </div>
 
   <!-- Section 1 -->
     <div id="process">
@@ -52,7 +51,7 @@
     </div>
 
   <!-- Middle banner -->
-    <div class="strip">
+    <div class="banner">
       <h3>Designed in New York
       </h3>
     </div>
