--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Broadway</title>
-    <link src="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
   <!-- Banner-->
@@ -69,13 +69,15 @@
       <h3 id="contact">Contact
       </h3>
       <p>Phone: (555)-555-5555<br />
+        <br />
         E-mail: test@example.com<br />
+        <br />
         Twitter: @test
       </p>
     </div>
-    <footer>
+    <div class="footer">
       <p>© Broadway 2017 Home About Work Team Contact
       </p>
-    </footer>
+    </div>
   </body>
 </html>
