--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       <h1 id="home">Broadway Design
       </h1>
       <nav>
-        <p><a href="#home">Home</a>
+        <p><a class="nav" href="#home">Home</a>
         </p>
-        <p><a href="#process">Process</a>
+        <p><a class="nav" href="#process">Process</a>
         </p>
-        <p><a href="#work">Work</a>
+        <p><a class="nav" href="#work">Work</a>
         </p>
-        <p><a href="#team">Team</a>
+        <p><a class="nav" href="#team">Team</a>
         </p>
-        <p><a href="#contact">Contact</a>
+        <p><a class="nav" href="#contact">Contact</a>
         </p>
       </nav>
     </div>
@@ -76,7 +76,12 @@
       </p>
     </div>
     <div class="footer">
-      <p>© Broadway 2017 Home About Work Team Contact
+      <p class="small">© Broadway 2017
+        <a class="nav" href="#home">Home</a>
+        <a class="nav" href="#process">About</a>
+        <a class="nav" href="#work">Work</a>
+        <a class="nav" href="#team">Team</a>
+        <a class="nav" href="#contact">Contact</a>
       </p>
     </div>
   </body>
